<resources>
    <string name="app_name">Наблюдатель</string>
    <string name="violations_photo">Фото нарушений</string>
    <string name="violations_photo_gallery">Из галереи</string>
    <string name="violations_video_gallery">Из галереи</string>
    <string name="violations_video">Видео нарушений</string>
    <string name="empty"/>
    <string name="section_elections_district_title">Избирательный участок</string>
    <string name="district_number_hint">введите номер или название</string>
    <string name="district_number">Номер УИК/название ТИК (*)</string>
    <string name="district_chairman">Председатель</string>
    <string name="district_chairman_hint">ФИО</string>
    <string name="district_secretary">Секретарь</string>
    <string name="district_banner_photo">Вывеска на участке</string>
    <string name="district_banner_photo_from_gallery">Выбрать фото</string>
    <string name="district_banner_photo_make">Камера</string>
	<string name="district_watchers_count">Всего наблюдателей</string>
	<string name="district_watchers_count_hint">число</string>
	<string name="section_before_elections">Подготовка</string>
    <string name="admitted_before_eight">Вы допущены на участок до 8:00</string>
    <string name="ballot_box_check_allowed">Предъявлены пустые ящики и пустые КОИБы</string>
    <string name="ballot_box_empty">Урны пусты</string>
    <string name="ballot_box_conform_to_reqs">Урны соответствуют требованиям</string>
    <string name="ballot_box_violations_photo">Фото нарушений</string>
    <string name="ballot_box_violations_gallery">Из галереи</string>
    <string name="ballot_box_violations_camera">Снять</string>
    <string name="take_a_photo">Сфотографировать</string>
    <string name="ballot_box_title">Урны</string>
    <string name="admitted_before_eight_title">Допуск на участок до 8:00</string>
    <string name="sos">S.O.S.</string>
    <string name="back">Назад</string>
    <string name="counter_set_on_zero">Счетчик на нуле</string>
    <string name="conter_test_failures">Есть ли сбои при тестировании</string>
    <string name="appearance_candidates_info">Правильно оформленные сведения о кандидатах</string>
    <string name="appearance_ballot_sample_present">Образец заполнения бюллетеня</string>
    <string name="appearance_ballot_extended_protocol">Увеличенная форма протокола</string>
    <string name="appearance_campaign_materials_closer_than_50m">Агитационные материалы ближе 50 м</string>
    <string name="appearance_vote_secrecy">Кабинки обеспечивают тайну голосвания</string>
    <string name="appearance_violation_photo">Фото нарушений</string>
    <string name="koib">КОИБ</string>
    <string name="appearance">Оформление участка</string>
    <string name="uik">Избирательный участок</string>
    <string name="voters_lists_checked">Вы смогли ознакомиться со списками</string>
    <string name="voters_lists_are_not_ok">Пометки в списках избирателей</string>
    <string name="voters_count_total">Всего избирателей в списке</string>
    <string name="enter_number">Введите число</string>
    <string name="voters_count_ballots_total">В реестре голосующих на дому</string>
    <string name="voters_count_ballot_at_home">Всего внесенных в реестр голосования на дому</string>
    <string name="voters_title">Списки избирателей</string>
    <string name="voters_lists_title">Статистика участка</string>
    <string name="voters_count_title">Число избирателей</string>
    <string name="attendance_data_match_on_10">По состоянию на 10:00 ваши данные о явке совпадают с данными ИК</string>
    <string name="attendance_data_match_on_12">По состоянию на 12:00 ваши данные о явке совпадают с данными ИК</string>
    <string name="attendance_data_match_on_15">По состоянию на 15:00 ваши данные о явке совпадают с данными ИК</string>
    <string name="attendance_data_match_on_18">По состоянию на 18:00 ваши данные о явке совпадают с данными ИК</string>
    <string name="attendance_data_comments">Комментарий по данным о явке</string>
    <string name="attendance_data_comments_hint">Введите комментарий</string>
    <string name="section_during_elections_attendance_title">Данные о явке</string>
    <string name="ballot_process_watch_allowed">Перемещение наблюдателей ограничено</string>
    <string name="ballot_box_watch_allowed">Вам позволили наблюдать за урнами</string>
    <string name="section_during_elections_bullot">Помехи наблюдателям</string>
    <string name="section_during_elections_bullot_title">Помехи наблюдателям</string>
    <string name="suspicious_voters_no_passport">Голосование без паспорта, регистрации, открепительного, по чужим документам</string>
    <string name="suspicious_voters_no_absentee_ballot">Голосование за других лиц по сговору с членами УИК</string>
    <string name="suspicious_voters_invalid_absentee_ballot">Голосование по чужим открепительным, неизъятие талона</string>
    <string name="suspicious_voters_absentee_ballot_returned_or_replaced">Осуществлялся ли возврат либо замена открепительных удостоверений после голосвания</string>
    <string name="suspicious_voters_brought_by_transport">Организованный подвоз групп голосующих</string>
    <string name="suspicious_voters_voted_for_absent_person">Осущестлялось ли голосование за отустствующих избирателей</string>
    <string name="ballot_process_pressure_on_voters">Давление на голосующих</string>
    <string name="section_during_elections_ballot_process_pressure_title">Давление на голосующих</string>
    <string name="section_during_elections_suspicious_voters_title">Подозрительные голосующие</string>
    <string name="bundle_of_ballots_vote">Голосование пачкой бюллетеней (вброс)</string>
    <string name="absentee_vote_registry_check_allowed">Вы своевременно (до выезда) ознакомились с реестром голосования на дому </string>
    <string name="absentee_vote_registry_is_valid">Вместо выписки из реестра "список из собеса" или "совета ветеранов"</string>
    <string name="absentee_vote_ballots_number_mismatch">Количество бюллетеней превышает число заявок более чем на 5%</string>
    <string name="absentee_vote_registry_is_correct">Реестр заполнен правильно: указаны ФИО, что ещё нужно?</string>
    <string name="absentee_vote_protocol_concluded">Составлен ли своевременно акт о голосовании вне участка</string>
    <string name="section_during_elections_absentee_vote_title">Нарушения при голосовании вне участка</string>
    <string name="section_during_elections_bundle_of_ballots_title">Голосование пачкой бюллетеней (вброс)</string>
    <string name="tab_watcher">Я</string>
    <string name="tab_checklist">Наблюдение</string>
    <string name="tab_spravochnik">Справочник</string>
    <string name="tab_sos">S.O.S.</string>
    <string name="spravochnik_title">Справочник</string>
    <string name="webview_back">Назад</string>
    <string name="webview_forward">Вперед</string>
    <string name="webview_find_next">Искать далее</string>
    <string name="search">Найти</string>
    <string name="unused_ballots_counted_after_vote_finish">Подсчёт начался сразу после окончания голосования</string>
    <string name="unused_ballots_counted_before_other_actions">Бюллетени подсчитаны и погашены до других подсчетов</string>
    <string name="unused_ballots_recorded_in_protocol_immediately">Данные сразу внесены в увеличенную форму протокола?</string>
    <string name="unused_ballots_title">Неиспользованные бюллетени</string>
    <string name="confirmed_voters_announced">Данные подсчёта оглашаются по каждой книге и в сумме по всем</string>
    <string name="confirmed_voters_recorded_in_protocol_immediately">Данные сразу внесены в увеличенную форму протокола</string>
    <string name="confirmed_voters_violations_photo">Фото нарушений</string>
    <string name="ballot_box_opening_video">Видео вскрытия урн</string>
    <string name="ballot_box_opening_ballot_bundles">Замечены сложенные пачки бюллетеней</string>
    <string name="absentee_ballot_box_opening_number_of_applications_announced">Число заявлений объявлено перед вскрытием каждого ящика</string>
    <string name="absentee_ballot_box_opening_ballot_bundles">Были ли замечены сложенные пачки бюллетеней?</string>
    <string name="counting_ballots_presented_or_announced">Бюллетени предъявлены и оглашены при сортировке</string>
    <string name="counting_ballots_sorted_in_separate_bundles">Бюллетени перекладывались отдельно в каждой рассортированной пачке при подсчёте</string>
    <string name="counting_ballots_marks_noticed_in_ballots">Вы могли видеть отметки в бюллетенях</string>
    <string name="counting_ballots_suspicious_counting">Возникли сомнения в правильности подсчёта</string>
    <string name="counting_ballots_ballot_check_allowed">Вы смогли проверить правильность подсчёта</string>
    <string name="counting_ballots_recorded_in_protocol_immediately">Данные сразу внесены в увеличенную форму протокола</string>
    <string name="control_calculations_conducted">Контрольные соотношения выполнены</string>
    <string name="control_calculations_performed">При невыполнении произведен пересчёт</string>
    <string name="confirmed_voters_title">Списки проголосовавших</string>
    <string name="report_button_label">Отчёт</string>
    <string name="counting_absentee_ballot_title">Вскрытие переносных ящиков</string>
    <string name="ballot_box_open_title">Вскрытие стационарных урн</string>
    <string name="control_calculations_title">Контрольные соотношения</string>
    <string name="counting_ballots_title">Сортировка и подсчет</string>
    <string name="tik_located_in_administration_building">ТИК в здании местной администрации</string>
    <string name="tik_building_addmittance_cleared">На сдачу протокола допущены все лица, имеющие на это право</string>
    <string name="tik_other_watchers_admittance_cleared">Вы можете свободно перемещаться по зданию, сопровождать представителей УИК</string>
    <string name="tik_watching_of_the_entire_procedure_allowed">Вы можете наблюдать за всей процедурой приема?</string>
    <string name="tik_other_watchers_allowed_to_watch_entire_procedure">Другие наблюдатели могут наблюдать за всей процедурой приема?</string>
    <string name="tik_protocols_are_received_in_a_single_room">Прием протоколов в едином помещении с УФСТ</string>
    <string name="tik_extended_table_in_the_same_room">Увеличенная форма таблицы в том же помещении?</string>
    <string name="tik_administation_personnel_participate_in_protocol_processing">Сотрудники администрации участвуют в приеме протоколов</string>
    <string name="tik_watching_of_the_entire_procedure_is_allowed">Вы можете наблюдать за всей процедурой приема?</string>
    <string name="tik_number_of_complains">Количество письменных жалоб, поданных в ТИК</string>
    <string name="tik_all_complains_are_checked">Все письменные жалобы рассмотрены</string>
    <string name="section_tik_ikmo_tik_district_title">Прием протокола и занесение данных в УФСТ</string>
    <string name="section_tik_ikmo_tik_processing_title">Прием протокола и занесение данных в УФСТ</string>
    <string name="tik_accepted_uik_protocol">ТИК принял протокол УИК</string>
    <string name="tik_made_corrections_to_uik_protocol">В протоколы УИК внесены правки</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="ballots_is_given_with_signage">Бюллетени выдаются членам УИК под роспись</string>
    <string name="final_meeting_observers_1">от Путина В.В.</string>
    <string name="final_meeting_observers">На итоговом заседании присутствуют наблюдатели от кандидатов:</string>
    <string name="final_meeting_observers_2">от Миронова С.М.</string>
    <string name="final_meeting_observers_3">от Жириновского В.В.</string>
    <string name="final_meeting_observers_4">от Зюганова Г.А.</string>
    <string name="final_meeting_observers_5">от Прохорова М.Д.</string>
    <string name="tab_report">Отчёт</string>
</resources>