<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nabludatel="http://schemas.android.com/apk/res/org.dvaletin.apps.nabludatel"
    style="@style/main_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" style="@style/main_pane_style">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tik_number_of_complains" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_number"
                    android:inputType="number"
                    android:tag="tik_number_of_complains" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/ImageView01"
                    style="@style/list_divider_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/list_devider" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tik_all_complains_are_checked" />

                <LinearLayout
                    android:id="@+id/LinearLayout03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right" >

                    <TextView
                        android:id="@+id/TextView3"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                    <org.dvaletin.apps.nabludatel.utils.Tumbler
                        android:id="@+id/tik_all_complains_are_checked"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:background="@drawable/for_frontend_04"
                        nabludatel:hiValue="true"
                        nabludatel:loValue="false"
                        android:max="2"
                        android:progress="1"
                        android:progressDrawable="@drawable/patch"
                        android:tag="final_meeting_all_complains_are_checked"
                        android:thumb="@drawable/for_frontend_03"
                        android:thumbOffset="0dp"
                        nabludatel:violationText="Не все письменные жалобы рассмотрены" />

                    <TextView
                        android:id="@+id/TextView4"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>
