<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nabludatel="http://schemas.android.com/apk/res/org.dvaletin.apps.nabludatel"
    style="@style/main_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/main_pane_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ballots_is_given_with_signage" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/TextView1"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

            <org.dvaletin.apps.nabludatel.utils.Tumbler
                android:id="@+id/ballots_is_given_with_signage"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:background="@drawable/for_frontend_04"
                nabludatel:hiValue="true"
                nabludatel:loValue="false"
                android:max="2"
                android:progress="1"
                android:progressDrawable="@drawable/patch"
                android:tag="ballots_is_given_with_signage"
                android:thumb="@drawable/for_frontend_03"
                android:thumbOffset="0dp"
                nabludatel:violationText="Не пустили на участок до 8:00" />

            <TextView
                android:id="@+id/TextView1"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

